--- a/style.css
+++ b/style.css
@@ -1,19 +1,75 @@
+body{
+	margin: 0px;
+}
 body *{
 	font-size: 24px;
+	font-family: Comic Sans MS;
 	box-sizing: border-box;
 }
-.calendar{
+.central_block{
 	width: 50%;
 	max-width: 500px;
 	min-width: 300px;
 	margin: 0 auto;
+	position: relative;
+}
+.calendar > .arrow{
+	position: absolute;
+	font-family: Webdings;
+	top: calc(50% - 25px);
+	cursor: pointer;
+	font-size: 60px;
+}
+.calendar > .arrow.left {
+	left: -50px;
+}
+.calendar > .arrow.right {
+	right: -50px;
+}
+.calendar > .block_slider{
+	position: relative;
+}
+.month{
+	display: none;
+}
+.month.active{
+	display: unset;
 }
 .month_title{
 	margin-bottom: 12px;
 	border-bottom: 1px solid #000;
+	font-weight: 600;
 }
 .month_body > span, .month_weekday > span{
 	display: inline-block;
 	width: 14%;
 	text-align: right;
+}
+.tabs_list{
+	margin-top: 40px; 
+}
+.tabs_list .tab{
+	display: none;
+}
+.tabs_list > label{
+	cursor: pointer;
+}
+.tabs_list input[value="tab_1"]:checked ~ div{
+	border: 1px solid #000;
+}
+.tabs_list input[value="tab_1"]:checked ~ div > .tab_1,
+	.tabs_list input[value="tab_2"]:checked ~ div > .tab_2{
+	display: unset;
+}
+/*
+.tabs_list .name_tabs input[type="radio"]{
+	display: none;
+}
+*/
+.event_form .event_block{
+	display: block;
+	width: 100%;
+}
+.event_form .event_block input[type="text"], .event_form .event_block select{
+	width: 100%;
 }
