--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body *{
 	font-weight: 600;
 }
 .month_body > span, .month_weekday > span{
+	position: relative;
 	display: inline-block;
 	width: 14%;
 	text-align: right;
@@ -54,17 +55,32 @@ body *{
 .month_body .select_date{
 	background-color: #808080;
 }
-.event_list:after, .schedule_list:after{
+.event_list:after, .schedule_list:before{
 	display: inline;
 	position: absolute;
+	right: 0px;
+	top: 0px;
 	content: "";
-	width: 10px;
-	height: 10px;
+	width: 6px;
+	height: 6px;
 	background-color: #000080;
-    border-radius: 10px;
+    border-radius: 6px;
 }
-.schedule_list:after{
+.schedule_list:before{
 	background-color: #008000;
+}
+.event_list.schedule_list:before{
+	right: 8px;
+}
+@media screen and (max-width: 400px){
+	.calendar > .arrow{
+		position: unset;
+		width: 50%;
+    	display: inline-block;
+	}
+	.calendar > .arrow.right {
+		text-align: right;
+	}
 }
 /*Табы*/
 .tabs_list{
@@ -89,10 +105,10 @@ body *{
 	display: inline;
 	position: absolute;
 	content: "";
-	width: 10px;
-	height: 10px;
+	width: 6px;
+	height: 6px;
 	background-color: #008000;
-    border-radius: 10px;
+    border-radius: 6px;
 }
 .link_tab[href="#tab_2"]:after{
 	background-color: #000080;
@@ -103,12 +119,20 @@ body *{
 .tabs_list .event{
 	margin-bottom: 10px;
 }
-.tabs_list .event span:nth-child(1){
-    width: 20%;
+#tab_2 .event span:nth-child(1){
+    width: 24%;
     display: inline-block;
 }
-.tabs_list .event span:nth-child(2){
-    width: 75%;
+#tab_2 .event span:nth-child(2){
+    width: 70%;
+    display: inline-block;
+}
+#tab_1 .event span:nth-child(1){
+    width: 32%;
+    display: inline-block;
+}
+#tab_1 .event span:nth-child(2){
+    width: 63%;
     display: inline-block;
 }
 .tabs_list .event .remove:before{
@@ -122,7 +146,7 @@ body *{
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	width: max-content;
+	/*width: max-content;*/
 	min-width: 100vw;
 	height: max-content;
 	min-height: 100vh;
@@ -140,4 +164,7 @@ body *{
 }
 .event_form .event_block input[type="text"], .event_form .event_block select{
 	width: 100%;
+}
+.footer{
+	height: 40px;
 }
